# urop

./: Big Boi 3.ipynb  Big Boi 4.ipynb  Big Boi.ipynb  DataAnalysis.py  Energy Deposition-Copy2.ipynb  Energy Deposition.ipynb  G4 Output.ipynb  Helper.py  Likelihood Distribution.ipynb  MC Analysis.ipynb  MOO Analysis-Copy1.ipynb  MOO Analysis.ipynb  MonteCarlo.py  MyProblem.py  New Fitter vs Data.ipynb  New Fitter vs MC.ipynb  New Fitter-Copy1.ipynb  New Fitter.ipynb  OldHelper.py  Path Analysis.ipynb  TODO.txt  Untitled.ipynb  Untitled2.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Variable Cluster-Copy1.ipynb  Variable Spread.ipynb  energies.txt  energies1000.txt  energies300.txt  energies3000.txt  oldDataAnalysis.py  oldMyProblem.py  research3-Copy1.ipynb  research3.1.ipynb  research3.ipynb  setup.py  setup_drive.sh  startmc.py  (+6 more)
.ipynb_checkpoints/: Angular Distributions-Copy1-checkpoint.ipynb  Better Track-checkpoint.ipynb  Big Boi 3-checkpoint.ipynb  Big Boi-checkpoint.ipynb  Cython-checkpoint.ipynb  DataAnalysis-Copy3-checkpoint.ipynb  DataAnalysis-Copy4-checkpoint.ipynb  DataAnalysis-Old-checkpoint.ipynb  DataAnalysis-checkpoint.ipynb  Energy Deposition-Copy1-checkpoint.ipynb  Energy Deposition-checkpoint.ipynb  G4 Output-checkpoint.ipynb  Helper-checkpoint.ipynb  IntroToData-checkpoint.ipynb  MC Analysis-Copy2-checkpoint.ipynb  MOO Analysis-Copy1-checkpoint.ipynb  MOO Compare-checkpoint.ipynb  Momentum Energy-checkpoint.ipynb  MonteCarlo-checkpoint.ipynb  MyProblem-Copy1-checkpoint.ipynb  MyProblem-checkpoint.ipynb  New Fitter vs Data-checkpoint.ipynb  New Fitter vs MC-Copy1-checkpoint.ipynb  New Fitter vs MC-checkpoint.ipynb  New Fitter-Copy1-checkpoint.ipynb  New Fitter-checkpoint.ipynb  Pareto Front-checkpoint.ipynb  Path Analysis-checkpoint.ipynb  Review Comments-checkpoint.ipynb  Variable Cluster-Copy1-checkpoint.ipynb  data-checkpoint.ipynb  new_DataAnalysis-checkpoint.ipynb  new_MyProblem-checkpoint.ipynb  research-Copy1-checkpoint.ipynb  research-checkpoint.ipynb  (+4 more)
geant_backup/Muon/: CMakeLists.txt  muon.cc
geant_backup/Muon/include/: B2RootHandler.hh  B2RunAction.hh  B2TrackerHit.hh  B2TrackerSD.hh  B4Analysis.hh
geant_backup/Muon/src/: B2EventAction.cc  B2PrimaryGeneratorAction.cc  B2RootHandler.cc  B2RunAction.cc  B2TrackerHit.cc  B2TrackerSD.cc  B2aDetectorConstruction.cc  B2aDetectorMessenger.cc
(+1608 files in other folders)
